--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>トップ | HiGA Math Contest</title>
+  <title>トップページ | HiGA Math Contest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 共通CSSを読み込む -->
@@ -26,7 +26,7 @@
 
   <main>
     <div class="card">
-      <h2>トップ</h2>
+      <h2>トップページ</h2>
       <p>
         ランディングページ（お洒落にしたい）
       </p>
