トップ実装

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="card">
       <h2>トップ</h2>
       <p>
-        ランディングページ（お洒落にしたい）
+        ランディングページ（お洒落にしたい）!
       </p>
     </div>
   </main>
