--- a/overview.html
+++ b/overview.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <h1>HiGA Math Contest</h1>
+    <h1><a href="index.html">HiGA Math Contest</a></h1>
     <nav>
       <a href="index.html">トップ</a>
       <a href="overview.html">概要</a>
