--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
   <header>
-    <h1>HiGA Math Contest</h1>
+    <h1><a href="index.html">HiGA Math Contest</a></h1>
     <nav>
-      <a href="index.html">トップ</a>
+      <a class = "here" href="index.html">トップ</a>
       <a href="overview.html">概要</a>
       <a href="rules.html">ルール</a>
       <a href="register.html">参加登録</a>
@@ -26,9 +26,20 @@
 
   <main>
     <div class="card">
-      <h2>トップ</h2>
+      <h2>Welcome to HiGA Math Contest</h2>
       <p>
-        ランディングページ（お洒落にしたい）
+        HiGA Math Contest ( HMC ) は、高校生有志によるHiGA生向けの数学コンテストです。<br>
+        競技数学の楽しさを広めることを目的としています。
+        詳しくは概要をご覧ください。
+      </p>
+      <p>
+        開催予定日：2026年6月20日(土) 13:00～2026年6月21日(日) 13:00
+      </p>
+      <p>
+        ページトップのナビゲーションから、概要、ルール、参加登録方法、コンテストの内容、使用可能なツール、過去の順位表などをご覧いただけます。
+      </p>
+      <p>
+        // このページはお洒落に全振り
       </p>
     </div>
   </main>
