--- a/ranking.html
+++ b/ranking.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <h1>HiGA Math Contest</h1>
+    <h1><a href="index.html">HiGA Math Contest</a></h1>
     <nav>
       <a href="index.html">トップ</a>
       <a href="overview.html">概要</a>
@@ -20,7 +20,7 @@
       <a href="register.html">参加登録</a>
       <a href="contest.html">コンテスト</a>
       <a href="tools.html">ツール</a>
-      <a href="ranking.html">順位表</a>
+      <a class = "here"  href="ranking.html">順位表</a>
     </nav>
   </header>
 
