--- a/tools.html
+++ b/tools.html
@@ -12,14 +12,14 @@
 <body>
 
   <header>
-    <h1>HiGA Math Contest</h1>
+    <h1><a href="index.html">HiGA Math Contest</a></h1>
     <nav>
       <a href="index.html">トップ</a>
       <a href="overview.html">概要</a>
       <a href="rules.html">ルール</a>
       <a href="register.html">参加登録</a>
       <a href="contest.html">コンテスト</a>
-      <a href="tools.html">ツール</a>
+      <a class = "here"  href="tools.html">ツール</a>
       <a href="ranking.html">順位表</a>
     </nav>
   </header>
