--- a/contest/index.html
+++ b/contest/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 共通CSSを読み込む -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
@@ -14,13 +14,12 @@
   <header>
     <h1><a href="index.html">HiGA Math Contest</a></h1>
     <nav>
-      <a href="index.html">トップ</a>
-      <a href="overview.html">概要</a>
-      <a href="rules.html">ルール</a>
-      <a href="register.html">参加登録</a>
-      <a class = "here" href="contest.html">コンテスト</a>
-      <a href="tools.html">ツール</a>
-      <a href="ranking.html">順位表</a>
+      <a href="/overview">概要</a>
+      <a href="/rules">ルール</a>
+      <a href="/tools">ツール</a>
+      <a class="here" href="/contest">コンテスト</a>
+      <a href="/ranking">順位表</a>
+      <a href="/register">参加登録</a>
     </nav>
   </header>
 
