--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <header>
     <h1><a href="index.html">HiGA Math Contest</a></h1>
     <nav>
-      <a class = "here" href="index.html">トップ</a>
-      <a href="overview.html">概要</a>
-      <a href="rules.html">ルール</a>
-      <a href="register.html">参加登録</a>
-      <a href="contest.html">コンテスト</a>
-      <a href="tools.html">ツール</a>
-      <a href="ranking.html">順位表</a>
+      <a class="here" href="/index">トップ</a>
+      <a href="/overview">概要</a>
+      <a href="/rules">ルール</a>
+      <a href="/tools">ツール</a>
+      <a href="/contest">コンテスト</a>
+      <a href="/ranking">順位表</a>
+      <a href="/register">参加登録</a>
     </nav>
   </header>
 
