--- a/register/index.html
+++ b/register/index.html
@@ -14,6 +14,7 @@
   <header>
     <h1><a href="index.html">HiGA Math Contest</a></h1>
     <nav>
+      <a href="/index">トップ</a>
       <a href="/overview">概要</a>
       <a href="/rules">ルール</a>
       <a href="/tools">ツール</a>
