--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <h1><a href="index.html">HiGA Math Contest</a></h1>
     <nav>
-      <a class="here" href="/index">トップ</a>
+      <a class="here" href="/">トップ</a>
       <a href="/overview">概要</a>
       <a href="/rules">ルール</a>
       <a href="/tools">ツール</a>
