--- a/rules/index.html
+++ b/rules/index.html
@@ -14,7 +14,7 @@
   <header>
     <h1><a href="index.html">HiGA Math Contest</a></h1>
     <nav>
-      <a href="/index">トップ</a>
+      <a href="/">トップ</a>
       <a href="/overview">概要</a>
       <a class="here" href="/rules">ルール</a>
       <a href="/tools">ツール</a>
