--- a/overview/index.html
+++ b/overview/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <h1><a href="index.html">HiGA Math Contest</a></h1>
+    <h1><a href="/">HiGA Math Contest</a></h1>
     <nav>
       <a href="/">トップ</a>
       <a class="here" href="/overview">概要</a>
