css.main aの追加とルールの調整

--- a/rules/index.html
+++ b/rules/index.html
@@ -26,16 +26,15 @@
 
   <main>
     <div class="card">
-      <p>
         <section id="terms" class="terms">
-          <h1>ルール</h1>
-          <h2>第1条（目的）</h2>
+          <h2>ルール</h2>
+          <h3>第1条（目的）</h3>
           <p>
             本規約は、HiGA Math Contest（以下「本コンテスト」）への参加条件および遵守事項を定め、
-            公平かつ円滑な運営を目的とします。
+            公平かつ円滑な運営を目的とします。<br>
             参加者は、本規約に同意した上で本コンテストに参加するものとします。
           </p>
-          <h2>第2条（使用可能ツール）</h2>
+          <h3>第2条（使用可能ツール）</h3>
           <p>参加者は、コンテスト中に以下のツールのみ使用できます。</p>
           <ul>
             <li>電卓</li>
@@ -43,8 +42,8 @@
             <li>累乗表</li>
             <li>運営が別途許可した資料</li>
           </ul>
-          <p>※上記以外の使用可否は「使用可能ツールページ」の記載を優先します。</p>
-                    <h2>第3条（禁止事項）</h2>
+          <p>※上記以外の使用可否は「<a href="/tools">ツール</a>」ページによる記載を優先します。</p>
+                    <h3>第3条（禁止事項）</h3>
                     <p>参加者は、コンテスト中に以下の行為を行ってはなりません。</p>
                     <h3>3.1 外部との通信</h3>
                     <ul>
@@ -66,7 +65,7 @@
                       <li>問題データの不正取得・共有</li>
                       <li>その他、運営が不正と判断する行為</li>
                     </ul>
-                    <h2>第4条（失格・順位取消）</h2>
+                    <h3>第4条（失格・順位取消）</h3>
                     <p>以下の場合、運営は参加者を失格または順位取消とすることができます。</p>
                     <ul>
                       <li>本規約への違反が確認された場合</li>
@@ -74,30 +73,29 @@
                       <li>登録情報に虚偽があった場合</li>
                       <li>その他、運営が不適切と判断した場合</li>
                     </ul>
-                    <h2>第5条（問題・解説の取り扱い）</h2>
+                    <h3>第5条（問題・解説の取り扱い）</h3>
                     <ol>
                       <li>問題および解説の著作権は運営に帰属します。</li>
                       <li>無断での再配布・転載・共有を禁止します。</li>
                       <li>学習目的での個人利用は認めます。</li>
                     </ol>
-                    <h2>第6条（免責事項）</h2>
+                    <h3>第6条（免責事項）</h3>
                     <ol>
                       <li>通信環境や端末不具合による不利益について、運営は責任を負いません。</li>
                       <li>Microsoft Forms や GitHub Pages 等の外部サービス障害について、運営は責任を負いません。</li>
                       <li>やむを得ない事情により、コンテスト内容を変更・中止する場合があります。</li>
                     </ol>
-                    <h2>第7条（規約の変更）</h2>
+                    <h3>第7条（規約の変更）</h3>
                     <p>
                       運営は、必要に応じて本規約を変更できるものとします。
                       重要な変更がある場合は、公式サイト上で告知します。
                     </p>
-                    <h2>第8条（同意）</h2>
+                    <h3>第8条（同意）</h3>
                     <p>
                       参加登録フォームにおいて「規約に同意する」にチェックした時点で、
                       本規約のすべてに同意したものとみなします。
                     </p>
                   </section>
-                </p>
               </div>
     </main>
 <footer>
