トップ更新

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <header>
+  <header class="landing-header">
     <h1><a href="/">HiGA Math Contest</a></h1>
     <nav>
       <a class="here" href="/">トップ</a>
@@ -45,7 +45,7 @@
     </div>
   </main>
 
-  <footer>
+  <footer class="landing-footer">
     © HiGA Math Contest
   </footer>
 
