--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="landing">
+  <div class="bg-blob"></div>
 
   <header class="landing-header">
     <h1><a href="/">HiGA Math Contest</a></h1>
@@ -25,27 +26,23 @@
   </header>
 
   <main>
-    <div class="card">
-      <h2>Welcome to HiGA Math Contest</h2>
+    <div class="card landing-card">
+      <h2><i>Welcome to HiGA Math Contest</i></h2>
       <p>
-        HiGA Math Contest ( HMC ) は、高校生有志によるHiGA生向けの数学コンテストです。<br>
-        競技数学の楽しさを広めることを目的としています。
+        HiGA Math Contest ( HMC ) は、<br>
+        高校生有志主催のHiGA生向けのオンライン数学コンテストです。<br>
         詳しくは概要をご覧ください。
       </p>
       <p>
-        開催予定日：2026年6月20日(土) 13:00～2026年6月21日(日) 13:00
+        <a href="/overview">概要はこちらから→</a>
       </p>
-      <p>
-        ページトップのナビゲーションから、概要、ルール、参加登録方法、コンテストの内容、使用可能なツール、過去の順位表などをご覧いただけます。
-      </p>
-      <p>
-        // このページはお洒落に全振り
-        ランディングページ（お洒落にしたい）
+      <p class="lp-contest-date">
+        <b>コンテスト日時：2026年6月20日(土) 13:00～2026年6月21日(日) 13:00</b>
       </p>
     </div>
   </main>
 
-  <footer class="landing-footer">
+  <footer>
     © HiGA Math Contest
   </footer>
 
