トップ文言更新

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
   <main>
     <div class="card landing-card">
-      <h2><i>Welcome to HiGA Math Contest</i></h2>
+      <h2><i>Welcome to HiGA Math Contest !</i></h2>
       <p>
         HiGA Math Contest ( HMC ) は、<br>
-        高校生有志主催のHiGA生向けのオンライン数学コンテストです。<br>
+        高校生有志主催のHiGA生向けオンライン数学コンテストです。<br>
         詳しくは概要をご覧ください。
       </p>
       <p>
