--- a/overview/index.html
+++ b/overview/index.html
@@ -27,7 +27,20 @@
   <main>
 
     <div class="contest-info">
-
+      <h2>予定されたコンテスト</h2>
+      <a href="/contest">
+        <div class="contest-details">
+          <h3>HiGA Math Contest</h3>
+          <p>
+            日時：2026年6月20日(土) 13:00～2026年6月21日(日) 13:00
+          </p>
+          <p>
+            時間：24:00
+          </p>
+          <p>
+            ペナルティ：5分
+        </div>
+      </a>
     </div>
 
     <div class="card">
@@ -53,7 +66,7 @@
           <li>幾何：Geometry</li>
         </ul>
         それぞれの分野において、満遍なく難易度の異なる問題が出題されます。<br>
-        各分野10問、合計40問程度の問題が出題されます。<br>
+        各分野10問、合計40問の問題が出題されます。<br>
         問題を解くのに必要な公式や定理は、事前に配布されている <b>Practice Pack</b> にまとめられています。
       </p>
       <h3>コンテストの形式</h3>
