--- a/tools/index.html
+++ b/tools/index.html
@@ -1337,14 +1337,157 @@
                 </tr>
               </tbody>
             </table>
-
-
     </section>
-    <!-- 累乗表 -->
-    <section class="tool-panel" role="tabpanel" id="power">
 
-    </section>
+    <script>
+  // 素数表の td に連番 data-i を自動付与
+  document.addEventListener("DOMContentLoaded", () => {
+    const primePanel = document.getElementById("prime");
+    if (!primePanel) return;
+
+    const cells = primePanel.querySelectorAll("td");
+    cells.forEach((td, idx) => {
+      td.setAttribute("data-i", String(idx + 1));
+    });
+  });
+  </script>
+
+<!-- 累乗表 -->
+<section class="tool-panel" role="tabpanel" id="power">
+  <div class="power-wrap">
+
+    <!-- 基数選ぶ -->
+    <div class="power-bases" aria-label="基数の選択"></div>
+
+    <!-- 設定（指数の最大） -->
+    <div class="power-controls" aria-label="表示設定">
+      <label class="power-control">
+        <span>指数の最大</span>
+        <input id="power-max-exp" type="number" min="5" max="200" step="1" value="30">
+      </label>
+      <button class="power-reset" type="button" id="power-reset">リセット</button>
+      <p class="power-hint">基数と指数の最大値を変更できます。</p>
+    </div>
+
+    <div class="power-table-wrap">
+      <table class="power-table" aria-label="累乗表">
+        <thead>
+          <tr>
+            <th scope="col" class="col-n">n</th>
+            <th scope="col" class="col-val"><span id="power-head">a^n</span></th>
+            <th scope="col" class="col-digits">桁数</th>
+          </tr>
+        </thead>
+        <tbody id="power-body"></tbody>
+      </table>
+    </div>
+
   </div>
+</section>
+<!--以下chatgptによるよくわからないJS-->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const baseMin = 2;
+  const baseMax = 20;
+  const defaultBase = 2;
+  const defaultMaxExp = 30;
+
+  const basesEl = document.querySelector("#power .power-bases");
+  const tbody = document.getElementById("power-body");
+  const head = document.getElementById("power-head");
+  const maxExpInput = document.getElementById("power-max-exp");
+  const resetBtn = document.getElementById("power-reset");
+
+  if (!basesEl || !tbody || !head || !maxExpInput || !resetBtn) return;
+
+  let currentBase = defaultBase;
+
+  function clampMaxExp(v){
+    if (Number.isNaN(v)) return defaultMaxExp;
+    return Math.max(5, Math.min(200, v));
+  }
+
+  // BigInt で a^n（オーバーフローしない）
+  function buildTable(a, maxExp){
+    head.textContent = `${a}^n`;
+    tbody.innerHTML = "";
+
+    let val = 1n;
+    const base = BigInt(a);
+
+    for (let n = 1; n <= maxExp; n++){
+      val *= base;
+      const s = val.toString();
+
+      const tr = document.createElement("tr");
+
+      const tdN = document.createElement("td");
+      tdN.className = "col-n";
+      tdN.textContent = String(n);
+
+      const tdV = document.createElement("td");
+      tdV.className = "power-val";
+      tdV.textContent = s;
+
+      const tdD = document.createElement("td");
+      tdD.className = "col-digits";
+      tdD.textContent = String(s.length);
+
+      tr.append(tdN, tdV, tdD);
+      tbody.appendChild(tr);
+    }
+  }
+
+  function setActiveBaseButton(){
+    basesEl.querySelectorAll(".power-base-btn").forEach(btn => {
+      btn.classList.toggle("active", Number(btn.dataset.base) === currentBase);
+    });
+  }
+
+  // 基数ボタン生成
+  function buildBaseButtons(){
+    basesEl.innerHTML = "";
+    for (let a = baseMin; a <= baseMax; a++){
+      const btn = document.createElement("button");
+      btn.type = "button";
+      btn.className = "power-base-btn";
+      btn.textContent = String(a);
+      btn.dataset.base = String(a);
+
+      btn.addEventListener("click", () => {
+        currentBase = a;
+        setActiveBaseButton();
+        buildTable(currentBase, clampMaxExp(parseInt(maxExpInput.value, 10)));
+      });
+
+      basesEl.appendChild(btn);
+    }
+    setActiveBaseButton();
+  }
+
+  // 入力変更で更新
+  maxExpInput.addEventListener("input", () => {
+    const maxExp = clampMaxExp(parseInt(maxExpInput.value, 10));
+    maxExpInput.value = String(maxExp);
+    buildTable(currentBase, maxExp);
+  });
+
+  // リセット
+  resetBtn.addEventListener("click", () => {
+    currentBase = defaultBase;
+    maxExpInput.value = String(defaultMaxExp);
+    setActiveBaseButton();
+    buildTable(currentBase, defaultMaxExp);
+  });
+
+  // 初期化
+  buildBaseButtons();
+  buildTable(currentBase, clampMaxExp(parseInt(maxExpInput.value, 10)));
+});
+</script>
+
+
+</div>
 </div>
 
 <!--以下JS-->
@@ -1380,4 +1523,3 @@
 
 </body>
 </html>
- 
