--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- 共通CSSを読み込む -->
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
 </head>
 
 <body class="landing">
@@ -45,6 +46,5 @@
   <footer>
     © HiGA Math Contest
   </footer>
-
 </body>
 </html>
