--- a/ranking/index.html
+++ b/ranking/index.html
@@ -7,10 +7,10 @@
 
   <!-- 共通CSSを読み込む -->
   <link rel="stylesheet" href="/styles.css">
+  <script src="/script.js" defer></script>
 </head>
 
-<body>
-
+<body class="ranking-bg">
   <header>
     <h1><a href="/">HiGA Math Contest</a></h1>
     <nav>
@@ -38,4 +38,5 @@
   </footer>
 
 </body>
+
 </html>
