add-problems/contest-pg/calc/update-tools

--- a/contest/index.html
+++ b/contest/index.html
@@ -26,11 +26,51 @@
 
   <main>
     <div class="card">
-      <h2>コンテスト</h2>
-      <p>
-        問題用紙, 解答Forms...
-      </p>
-    </div>
+  <h2>コンテスト</h2>
+
+  <div class="contest-grid">
+    <!-- Algebra -->
+    <section class="contest-col">
+      <h3>代数　Algebra</h3>
+      <ul class="contest-links">
+        <li><a href="/contest/questions/algebra/q1.html">Q1機能するよ<span class="score">100 pts</span></a></li>
+        <li><a href="/">Q2<span class="score">100 pts</span></a></li>
+        <li><a href="/">下にどんどん増やしていく<span class="score">100 pts</span></a></li>
+      </ul>
+    </section>
+
+    <!-- Combinatorics -->
+    <section class="contest-col">
+      <h3>組み合わせ　Combinatorics</h3>
+      <ul class="contest-links">
+        <li><a href="/">Q1<span class="score">100 pts</span></a></li>
+        <li><a href="/">Q2<span class="score">100 pts</span></a></li>
+        <li><a href="/">下にどんどん増やしていく<span class="score">100 pts</span></a></li>
+      </ul>
+    </section>
+
+    <!-- Geometry -->
+    <section class="contest-col">
+      <h3>幾何　Geometry</h3>
+      <ul class="contest-links">
+        <li><a href="/">Q1<span class="score">100 pts</span></a></li>
+        <li><a href="/">Q2<span class="score">100 pts</span></a></li>
+        <li><a href="/">下にどんどん増やしていく<span class="score">100 pts</span></a></li>
+      </ul>
+    </section>
+
+    <!-- Number Theory -->
+    <section class="contest-col">
+      <h3>整数　Number Theory</h3>
+      <ul class="contest-links">
+        <li><a href="/">Q1<span class="score">100 pts</span></a></li>
+        <li><a href="/">Q2<span class="score">100 pts</span></a></li>
+        <li><a href="/">下にどんどん増やしていく<span class="score">100 pts</span></a></li>
+      </ul>
+    </section>
+  </div>
+</div>
+
   </main>
 
   <footer>
