ファイル構成の調整/リンクの調整/コンテスト画面の編集

--- a/contest/index.html
+++ b/contest/index.html
@@ -25,53 +25,25 @@
   </header>
 
   <main>
-    <div class="card">
-  <h2>コンテスト</h2>
+  <div class="contest-info">
+  <h2>予定されたコンテスト</h2>
 
-  <div class="contest-grid">
-    <!-- Algebra -->
-    <section class="contest-col">
-      <h3>代数　Algebra</h3>
-      <ul class="contest-links">
-        <li><a href="/contest/questions/algebra/q1.html">Q1機能するよ<span class="score">100 pts</span></a></li>
-        <li><a href="/">Q2<span class="score">100 pts</span></a></li>
-        <li><a href="/">下にどんどん増やしていく<span class="score">100 pts</span></a></li>
-      </ul>
-    </section>
+      <a href="/contest/scheduled_contest/index.html">
+        <div class="contest-details">
+          <h3>HiGA Math Contest</h3>
+          <p>
+            日時：2026年6月20日(土) 13:00～2026年6月21日(日) 13:00
+          </p>
+          <p>
+            時間：24:00
+          </p>
+          <p>
+            ペナルティ：5分
+        </div>
+      </a>
 
-    <!-- Combinatorics -->
-    <section class="contest-col">
-      <h3>組み合わせ　Combinatorics</h3>
-      <ul class="contest-links">
-        <li><a href="/">Q1<span class="score">100 pts</span></a></li>
-        <li><a href="/">Q2<span class="score">100 pts</span></a></li>
-        <li><a href="/">下にどんどん増やしていく<span class="score">100 pts</span></a></li>
-      </ul>
-    </section>
-
-    <!-- Geometry -->
-    <section class="contest-col">
-      <h3>幾何　Geometry</h3>
-      <ul class="contest-links">
-        <li><a href="/">Q1<span class="score">100 pts</span></a></li>
-        <li><a href="/">Q2<span class="score">100 pts</span></a></li>
-        <li><a href="/">下にどんどん増やしていく<span class="score">100 pts</span></a></li>
-      </ul>
-    </section>
-
-    <!-- Number Theory -->
-    <section class="contest-col">
-      <h3>整数　Number Theory</h3>
-      <ul class="contest-links">
-        <li><a href="/">Q1<span class="score">100 pts</span></a></li>
-        <li><a href="/">Q2<span class="score">100 pts</span></a></li>
-        <li><a href="/">下にどんどん増やしていく<span class="score">100 pts</span></a></li>
-      </ul>
-    </section>
   </div>
-</div>
-
-  </main>
+</main>
 
   <footer>
     © HiGA Math Contest
