--- a/contest/scheduled_contest/questions/algebra/q1.html
+++ b/contest/scheduled_contest/questions/algebra/q1.html
@@ -10,7 +10,7 @@
 
 <body class="problem-bg">
   <header class="problem-header">
-    <a class="back-btn" href="/contest/index.html">← 戻る</a>
+    <a class="back-btn" href="/contest/scheduled_contest/index.html">← 戻る</a>
     <div class="problem-meta">
       <div class="problem-title">代数　Algebra - Problem 1</div>
       <div class="problem-sub">Points: <span class="pts">100</span></div>
