nav ハンバーガーメニューの実装

--- a/rules/index.html
+++ b/rules/index.html
@@ -13,7 +13,14 @@
 <body class="rules-bg">
   <header>
     <h1><a href="/">HiGA Math Contest</a></h1>
-    <nav>
+
+    <button class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+
+    <nav id="nav">
       <a href="/">トップ</a>
       <a href="/overview">概要</a>
       <a class="here" href="/rules">ルール</a>
@@ -22,6 +29,8 @@
       <a href="/ranking">順位表</a>
       <a href="/register">参加登録</a>
     </nav>
+
+    <div class="overlay" id="overlay"></div>
   </header>
 
   <main>
