--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
 <body class="landing">
   <div class="bg-blob"></div>
 
-  <header class="landing-header">
+  <header>
     <h1><a href="/">HiGA Math Contest</a></h1>
-    <nav>
+
+    <button class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+
+    <nav id="nav">
       <a class="here" href="/">トップ</a>
       <a href="/overview">概要</a>
       <a href="/rules">ルール</a>
@@ -24,6 +31,8 @@
       <a href="/ranking">順位表</a>
       <a href="/register">参加登録</a>
     </nav>
+
+    <div class="overlay" id="overlay"></div>
   </header>
 
   <main>
