--- a/contest/scheduled_contest/questions/algebra/q1.html
+++ b/contest/scheduled_contest/questions/algebra/q1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Problem 1 | HiGA Math Contest</title>
   <link rel="stylesheet" href="/styles.css">
-  <script src="/script.js" defer></script>
+  <script src="/calculator.js"></script>
 </head>
 
 <body class="problem-bg">
@@ -18,74 +18,8 @@
   </header>
 
   <main class="problem-wrap">
-    <!-- 左：電卓 -->
-  <section class="panel calc-panel">
-  <div class="calc-head">
-    <div>
-      <h2 class="calc-title">電卓</h2>
-      <p class="calc-sub">有効桁数15桁。キーボード対応。</p>
-    </div>
-  </div>
-  
-  <div class="calc-shell" aria-label="calculator">
-
-  <div class="calc-display-wrap">
-  <input id="calc-display" class="calc-display" value="0" readonly aria-label="display">
-  <button id="calc-copy" class="calc-copy-btn" aria-label="Copy">
-    <!-- copy icon -->
-    <svg class="icon-copy" viewBox="0 0 24 24" width="16" height="16" aria-hidden="true">
-      <rect x="9" y="9" width="11" height="11" rx="2"
-            fill="none" stroke="currentColor" stroke-width="1.6"/>
-      <rect x="4" y="4" width="11" height="11" rx="2"
-            fill="none" stroke="currentColor" stroke-width="1.6"/>
-    </svg>
-
-    <!-- check icon -->
-    <svg class="icon-check" viewBox="0 0 24 24" width="16" height="16" aria-hidden="true">
-      <polyline points="5 13 10 18 19 7"
-        fill="none" stroke="currentColor" stroke-width="2"
-        stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
-  </button>
-</div>
-
-    <div class="calc-grid5">
-      <button class="calc-btn" data-act="sqrt">√</button>
-      <button class="calc-btn" data-act="mc">MC</button>
-      <button class="calc-btn" data-act="mr">MR</button>
-      <button class="calc-btn" data-act="mminus">M-</button>
-      <button class="calc-btn" data-act="mplus">M+</button>
-
-      <button class="calc-btn" data-act="sq">x²</button>
-      <button class="calc-btn" data-num="7">7</button>
-      <button class="calc-btn" data-num="8">8</button>
-      <button class="calc-btn" data-num="9">9</button>
-      <button class="calc-btn op" data-op="/">÷</button>
-
-      <button class="calc-btn" data-act="cube">x³</button>
-      <button class="calc-btn" data-num="4">4</button>
-      <button class="calc-btn" data-num="5">5</button>
-      <button class="calc-btn" data-num="6">6</button>
-      <button class="calc-btn op" data-op="*">×</button>
-
-      <button class="calc-btn" data-act="c">C</button>
-      <button class="calc-btn" data-num="1">1</button>
-      <button class="calc-btn" data-num="2">2</button>
-      <button class="calc-btn" data-num="3">3</button>
-      <button class="calc-btn op" data-op="-">−</button>
-
-      <button class="calc-btn" data-act="ac">AC</button>
-      <button class="calc-btn" data-num="0">0</button>
-      <button class="calc-btn" data-num=".">.</button>
-      <button class="calc-btn eq" data-act="eq">=</button>
-      <button class="calc-btn op" data-op="+">+</button>
-    </div>
-
-    <p class="calc-hint">
-      キー：0-9 / . / + - * / / Enter= / Backspace=1文字消す / Esc=AC
-    </p>
-  </div>
-    </section>
+    
+    <my-calculator></my-calculator>
 
     <!-- 右：問題 -->
     <section class="panel statement-panel">
