--- a/overview/index.html
+++ b/overview/index.html
@@ -37,7 +37,7 @@
 
     <div class="contest-info">
       <h2>予定されたコンテスト</h2>
-      <a href="/contest/scheduled_contest/index.html">
+      <a href="/contest/">
         <div class="contest-details">
           <h3>HiGA Math Contest</h3>
           <p>
