軽微な文言の変更

--- a/overview/index.html
+++ b/overview/index.html
@@ -35,23 +35,6 @@
 
   <main>
 
-    <div class="contest-info">
-      <h2>予定されたコンテスト</h2>
-      <a href="/contest/">
-        <div class="contest-details">
-          <h3>HiGA Math Contest</h3>
-          <p>
-            日時：2026年6月20日(土) 13:00～2026年6月21日(日) 13:00
-          </p>
-          <p>
-            時間：24:00
-          </p>
-          <p>
-            ペナルティ：5分
-        </div>
-      </a>
-    </div>
-
     <div class="card">
       <h2>概要</h2>
       <h3>コンテストの目的</h3>
@@ -70,9 +53,9 @@
         コンテストでは、競技数学の一般的な下の４つの分野から出題されます。<br>
         <ul>
           <li>代数：Algebra</li>
-          <li>整数：Numbers</li>
           <li>組合せ：Combinations</li>
           <li>幾何：Geometry</li>
+          <li>整数：Number Theory</li>
         </ul>
         それぞれの分野において、満遍なく難易度の異なる問題が出題されます。<br>
         各分野10問、合計40問の問題が出題されます。<br>
