ログイン機能の実装 & contestページ構造整理

--- a/contest/index.html
+++ b/contest/index.html
@@ -8,6 +8,8 @@
   <!-- 共通CSSを読み込む -->
   <link rel="stylesheet" href="/styles.css">
   <script src="/script.js" defer></script>
+  <script type="module" src="/signup.js"></script>
+  <script type="module" src="/supabase-client.js"></script>  
 </head>
 
 <body class="contest-bg">
@@ -26,8 +28,7 @@
       <a href="/rules">ルール</a>
       <a href="/tools">ツール</a>
       <a class="here" href="/contest">コンテスト</a>
-      <a href="/ranking">順位表</a>
-      <a href="/register">参加登録</a>
+      <a href="/contest/account" id="username">...</a>
     </nav>
 
     <div class="overlay" id="overlay"></div>
@@ -37,19 +38,12 @@
   <div class="contest-info">
   <h2>予定されたコンテスト</h2>
 
-      <a href="/contest/problems/">
-        <div class="contest-details">
-          <h3>HiGA Math Contest</h3>
-          <p>
-            日時：2026年6月20日(土) 13:00～2026年6月21日(日) 13:00
-          </p>
-          <p>
-            時間：24:00
-          </p>
-          <p>
-            ペナルティ：5分
-        </div>
-      </a>
+    <!--Table Format-->
+    <div>
+      <h3>HiGA Math Contest</h3>
+      <p>2026/6/20 13:00</p>
+      <p>24:00</p>
+    </div>
 
   </div>
 </main>
