--- a/contest/problems/index.html
+++ b/contest/problems/index.html
@@ -18,8 +18,7 @@
       <a href="/rules">ルール</a>
       <a href="/tools">ツール</a>
       <a class="here" href="/contest">コンテスト</a>
-      <a href="/ranking">順位表</a>
-      <a href="/register">参加登録</a>
+      <a href="/contest/account" id="username">...</a>
     </nav>
   </header>
 
