--- a/rules/index.html
+++ b/rules/index.html
@@ -28,7 +28,7 @@
       <a class="here" href="/rules">ルール</a>
       <a href="/tools">ツール</a>
       <a href="/contest">コンテスト</a>
-      <a href="/contest/account" id="username">...</a>
+      <a href="/contest/account" id="nav-username">...</a>
     </nav>
 
     <div class="overlay" id="overlay"></div>
