--- a/contest/problems/index.html
+++ b/contest/problems/index.html
@@ -18,7 +18,7 @@
       <a href="/rules">ルール</a>
       <a href="/tools">ツール</a>
       <a class="here" href="/contest">コンテスト</a>
-      <a href="/contest/account" id="username">...</a>
+      <a href="/contest/account" id="nav-username">...</a>
     </nav>
   </header>
 
