--- a/contest/problems/index.html
+++ b/contest/problems/index.html
@@ -7,6 +7,8 @@
   <!-- 共通CSSを読み込む -->
   <link rel="stylesheet" href="/styles.css">
   <script src="/script.js" defer></script>
+  <script type="module" src="/supabase-client.js"></script>
+  <script type="module" src="/signup.js"></script>
 </head>
 
 <body class="contest-bg">
