/contest 全体のページ構成の更新

--- a/account/index.html
+++ b/account/index.html
@@ -18,7 +18,9 @@
   <header>
     <h1><a href="/">HiGA Math Contest</a></h1>
     <button class="hamburger" id="hamburger">
-      <span></span><span></span><span></span>
+      <span></span>
+      <span></span>
+      <span></span>
     </button>
     <nav id="nav">
       <a href="/">トップ</a>
@@ -26,7 +28,7 @@
       <a href="/rules">ルール</a>
       <a href="/tools">ツール</a>
       <a href="/contest">コンテスト</a>
-      <a href="/contest/account" id="nav-username">...</a>
+      <a class="here" href="/account" id="nav-username">...</a>
     </nav>
     <div class="overlay" id="overlay"></div>
   </header>
