--- a/contest/problems/index.html
+++ b/contest/problems/index.html
@@ -7,14 +7,21 @@
   <!-- 共通CSSを読み込む -->
   <link rel="stylesheet" href="/styles.css">
   <script src="/script.js" defer></script>
-  <script type="module" src="/supabase-client.js"></script>
   <script type="module" src="/signup.js"></script>
+  <script type="module" src="/supabase-client.js"></script>  
 </head>
 
 <body class="contest-bg">
   <header>
     <h1><a href="/">HiGA Math Contest</a></h1>
-    <nav>
+
+    <button class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+    
+    <nav id="nav">
       <a href="/">トップ</a>
       <a href="/overview">概要</a>
       <a href="/rules">ルール</a>
@@ -22,6 +29,8 @@
       <a class="here" href="/contest">コンテスト</a>
       <a href="/account" id="nav-username">...</a>
     </nav>
+
+    <div class="overlay" id="overlay"></div>
   </header>
 
   <main>
