軽微な文言の調整

--- a/contest/index.html
+++ b/contest/index.html
@@ -43,7 +43,7 @@
           <tr>
             <th>コンテスト名</th>
             <th>開始時刻</th>
-            <th>制限時間</th>
+            <th>コンテスト時間</th>
             <th></th>
           </tr>
         </thead>
